# type-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
assets/: default_config.toml
assets/themes/: classic16.toml  dracula.toml  serika_dark.toml  terminal.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROGRESS.md  ROADMAP.md
docs/adr/: ADR-0001-tech-stack.md  ADR-0002-stealth-ui.md  ADR-0003-stats-visualization.md
src/: app.rs  cli.rs  config.rs  input.rs  lib.rs  main.rs  stats_app.rs
src/engine/: action.rs  mod.rs  presets.rs  session.rs
src/sources/: docx.rs  mod.rs  pdf.rs  wordlist.rs
src/stats/: keystats.rs  metrics.rs  mod.rs
src/storage/: mod.rs  queries.rs  runs.rs  schema.rs
src/ui/: banner.rs  mod.rs  results_view.rs  stats_view.rs  theme.rs  typing_view.rs
tests/: app_session.rs  stats_screen.rs
